@@ -13,7 +13,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.4</string>
+	<string>0.4.1-rc1</string>
 	<key>CFBundleSignature</key>
 	<string>nnbt</string>
 	<key>LSMinimumSystemVersion</key>
